@startuml
title Evenite System Class Diagram

skinparam monochrome true
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 12

class User {
  -userId: String
  -username: String
  -email: String
  -password: String
  -role: String
  -profilePic: String
  -createdAt: Date
  -updatedAt: Date
  +login()
  +logout()
  +updateProfile()
}

class Student {
  -studentId: String
  -institute: String
  -phone: String
  -isVerified: Boolean
  +registerForEvent()
  +provideFeedback()
  +collectCertificate()
}

class Host {
  -hostId: String
  -organization: String
  -contactInfo: String
  +createEvent()
  +manageEvent()
  +trackRegistrations()
}

class Administrator {
  -adminId: String
  -permissions: String[]
  +manageUsers()
  +verifyStudents()
  +monitorSystem()
}

class Event {
  -eventId: String
  -title: String
  -description: String
  -date: Date
  -location: String
  -capacity: Integer
  -status: String
  +create()
  +update()
  +delete()
  +publish()
}

class Registration {
  -registrationId: String
  -status: String
  -registeredAt: Date
  -attended: Boolean
  +confirm()
  +cancel()
}

class Feedback {
  -feedbackId: String
  -rating: Integer
  -comment: String
  -submittedAt: Date
  +submit()
}

class Certificate {
  -certificateId: String
  -issuedAt: Date
  -expiresAt: Date
  -certificateUrl: String
  +generate()
  +revoke()
}

class Notification {
  -notificationId: String
  -message: String
  -timestamp: Date
  -isRead: Boolean
  +send()
  +markAsRead()
}

' Relationships
User <|-- Student
User <|-- Host
User <|-- Administrator

Student "1" -- "0..*" Registration
Host "1" -- "0..*" Event
Event "1" -- "0..*" Registration
Event "1" -- "0..*" Feedback
Event "1" -- "0..*" Certificate

Registration "0..*" -- "1" Event
Registration "0..*" -- "1" Student
Feedback "0..*" -- "1" Event
Feedback "0..*" -- "1" Student
Certificate "0..*" -- "1" Event
Certificate "0..*" -- "1" Student

User "1" -- "0..*" Notification
Event "1" -- "0..*" Notification
@enduml